--- a/view/theme/vier/style.css
+++ b/view/theme/vier/style.css
@@ -935,7 +935,6 @@ ul.menu-popup .empty {
 	background-color: #ffffff;
 	border: 1px solid #MenuBorder;
 	overflow: auto;
-	z-index: 100000;
 	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.7);
 }
 .acpopup-mce {
